Winning logic is broken. Need to finish implementing the magic box."

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <div class="results hidden"></div>
     <h1>Tic Tac Toe</h1>
     <header class="player-turn"></header>
     <div class="board">
-        <div class="box" id="box-1" data-index="2" data-owner="">1</div>
-        <div class="box" id="box-2" data-index="7" data-owner="">2</div>
-        <div class="box" id="box-3" data-index="6" data-owner="">3</div>
-        <div class="box" id="box-4" data-index="9" data-owner="">4</div>
-        <div class="box" id="box-5" data-index="5" data-owner="">5</div>
-        <div class="box" id="box-6" data-index="1" data-owner="">6</div>
-        <div class="box" id="box-7" data-index="4" data-owner="">7</div>
-        <div class="box" id="box-8" data-index="3" data-owner="">8</div>
-        <div class="box" id="box-9" data-index="8" data-owner="">9</div>
+        <div class="box" data-index="1" data-value="2" data-owner='-'></div>
+        <div class="box" data-index="2" data-value="7" data-owner='-'></div>
+        <div class="box" data-index="3" data-value="6" data-owner='-'></div>
+        <div class="box" data-index="4" data-value="9" data-owner='-'></div>
+        <div class="box" data-index="5" data-value="5" data-owner='-'></div>
+        <div class="box" data-index="6" data-value="1" data-owner='-'></div>
+        <div class="box" data-index="7" data-value="4" data-owner='-'></div>
+        <div class="box" data-index="8" data-value="3" data-owner='-'></div>
+        <div class="box" data-index="9" data-value="8" data-owner='-'></div>
     </div>
-    <div class="results hidden"></div>
     <script src="script.js"></script>
 </body>
 </html>
